--- a/httpdocs/css/admin_styles.css
+++ b/httpdocs/css/admin_styles.css
@@ -95,11 +95,8 @@ form {
     border-bottom: 2px solid #3399FF; }
 
 button {
-  margin: 0 33%;
-  width: 30%;
   color: black;
-  background-color: #3399FF;
-  border: 1px;
+  background-color: white;
   border-radius: 5px; }
 
 #myCanvas {
@@ -110,8 +107,28 @@ button {
   float: right;
   padding: 10px; }
 
-table, td {
-  border: 1px solid black; }
+table {
+  table-layout: relative;
+  width: 100%;
+  border-collapse: collapse;
+  text-align: center; }
+
+tr:nth-child(even) {
+  background-color: #D6D6D6; }
+
+th {
+  background-color: #3399FF;
+  color: white;
+  text-align: center;
+  margin: 0 auto; }
+
+td {
+  border-bottom: 1px solid black;
+  margin: 0 auto;
+  text-align: center; }
+
+#firsttd {
+  white-space: nowrap; }
 
 .logo {
   height: 10%;
