--- a/httpdocs/css/admin_styles.scss
+++ b/httpdocs/css/admin_styles.scss
@@ -100,6 +100,9 @@ textarea {
 
 }
 
+.print-only {
+    display:none;
+}
 
 #percentages {
     float: right;
@@ -199,6 +202,23 @@ button {
   border-radius: 5px;
   margin: 0 33%;
   width: 25%;
+}
+
+@media print {
+    .print-only {
+        display:table-cell;
+    }
+    .web-only {
+        display:none;
+    }
+
+    table, th, td {
+        border: 1px solid black;
+    }
+
+    .chart-container {
+        display:none;
+    }
 }
 
 /* ==========================================================================
