hide new request button from print page [Deploy: Production]

--- a/httpdocs/css/admin_styles.css
+++ b/httpdocs/css/admin_styles.css
@@ -191,6 +191,12 @@ button {
   .web-only {
     display: none; }
 
+  button {
+    display: none !important; }
+
+  #addRequest {
+    display: none; }
+
   table, th, td {
     border: 1px solid black; }
 
