--- a/httpdocs/css/admin_styles.scss
+++ b/httpdocs/css/admin_styles.scss
@@ -229,6 +229,14 @@ button {
         display:none;
     }
 
+    button {
+        display:none !important;
+    }
+
+    #addRequest {
+        display:none;
+    }
+
     table, th, td {
         border: 1px solid black;
     }
