piechart visible on print [Deploy: Production]

--- a/httpdocs/css/admin_styles.css
+++ b/httpdocs/css/admin_styles.css
@@ -213,9 +213,10 @@ button {
 
   table, th, td {
     border: 1px solid black; }
-
+/*
   .chart-container {
     display: none; } }
+*/
 /* ==========================================================================
    Helper classes
    ========================================================================== */
